--- a/style.css
+++ b/style.css
@@ -6,10 +6,15 @@ html {
   padding: 0;
 }
 
+body {
+  width: 100%;
+  height: 100%;
+}
+
 .container {
   display: flex;
   flex-direction: column;
-  width: 30%
+  width: 30%;
 }
 
 .obrazek {
@@ -34,16 +39,22 @@ h1 {
 
 p {
   font-family: sans-serif;
+  font-size: 1rem;
+  padding: 1rem;
 }
 
 .button1 {
   background-color: #1fcca4;
   color: #ffffff;
   border: none;
+  height: 3rem;
+  font-size: 1rem;
 }
 
 .button2 {
   background-color: #0197f6;
   color: #ffffff;
   border: none;
+  height: 3rem;
+  font-size: 1rem;
 }
