--- a/style.css
+++ b/style.css
@@ -1,20 +1,25 @@
 html {
   background-image: linear-gradient(to bottom, #615dad, #ffc8da);
   height: 100%;
-  width: 100%;
   margin: 0;
   padding: 0;
 }
 
 body {
-  width: 100%;
-  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 .container {
   display: flex;
   flex-direction: column;
-  width: 30%;
+  /*position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);*/
+  width: 350px;
 }
 
 .obrazek {
@@ -44,6 +49,12 @@ p {
 }
 
 .button1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: sans-serif;
+  text-decoration: none;
+  text-align: center;
   background-color: #1fcca4;
   color: #ffffff;
   border: none;
@@ -52,9 +63,23 @@ p {
 }
 
 .button2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: sans-serif;
+  text-decoration: none;
+  text-align: center;
   background-color: #0197f6;
   color: #ffffff;
   border: none;
   height: 3rem;
   font-size: 1rem;
+}
+
+.button1:hover {
+  background-color: #1cbb96;
+}
+
+.button2:hover {
+  background-color: #0090e9;
 }
