--- a/hra_style.css
+++ b/hra_style.css
@@ -37,16 +37,17 @@ h1 {
 .podnadpisem {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content:space-between;
   height: fit-content;
+  padding-bottom: 20px;
 }
 
 .hraje {
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content:flex-start;
   gap: 5px;
-  padding-left: 20px;
+  
 }
 
 p {
@@ -65,7 +66,6 @@ p {
   flex-direction: row;
   justify-content: flex-end;
   gap: 5px;
-  padding-right: 20px;
 }
 
 .home {
@@ -91,12 +91,12 @@ background-color: #0090e9;
 }
 
 table {
-  display: table;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px;
+  padding: 0px;
   border-collapse: collapse;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.473);
 }
 
 tr {
