male_graficke_upravy

--- a/style.css
+++ b/style.css
@@ -16,11 +16,7 @@ body {
 .container {
   display: flex;
   flex-direction: column;
-  /*position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);*/
-  width: 350px;
+  width: 80vmin;
 }
 
 .obrazek {
