--- a/hra_style.css
+++ b/hra_style.css
@@ -7,17 +7,15 @@ html {
 
 body {
   display: flex;
-  height: 100%;
   justify-content: center;
   align-items: center;
-  margin: 0;
+  height: 100vh;
+  margin: 0%;
 }
 
 .container {
   display: flex;
   flex-direction: column;
-  /* border: 2px solid white; */
-  max-width: 80vmin;
 }
 
 @font-face {
