--- a/hra_style.css
+++ b/hra_style.css
@@ -133,3 +133,17 @@ td {
 .cell:hover {
   background-color: #f6e1fd8c;
 }
+
+.bile_kolecko {
+  background-image: url(podklady/circle_white.svg);
+  background-size: 80%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.bily_krizek {
+  background-image: url(podklady/cross_white.svg);
+  background-size: 80%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
