--- a/hra_style.css
+++ b/hra_style.css
@@ -134,16 +134,16 @@ td {
   background-color: #f6e1fd8c;
 }
 
-.bile_kolecko {
-  background-image: url(podklady/circle_white.svg);
+.player {
   background-size: 80%;
   background-repeat: no-repeat;
   background-position: center;
 }
 
+.bile_kolecko {
+  background-image: url(podklady/circle_white.svg);
+}
+
 .bily_krizek {
   background-image: url(podklady/cross_white.svg);
-  background-size: 80%;
-  background-repeat: no-repeat;
-  background-position: center;
 }
