--- a/style.css
+++ b/style.css
@@ -16,11 +16,13 @@ body {
 .container {
   display: flex;
   flex-direction: column;
-  width: 80vmin;
+  width: 60vmin;
 }
 
 .obrazek {
   flex: 1;
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
 }
 
 @font-face {
@@ -71,6 +73,8 @@ p {
   border: none;
   height: 3rem;
   font-size: 1rem;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
 }
 
 .button1:hover {
